fixed alignment of selection input in list

--- a/src/stylus/components/_lists.styl
+++ b/src/stylus/components/_lists.styl
@@ -67,6 +67,9 @@
       justify-content: flex-start
       align-items: center
       flex: 1 0 56px
+      
+      .input-group
+        align-items: center
     
     .avatar
       justify-content: flex-start
